--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -7,14 +7,15 @@
     </h1>
     <%# 購入内容の表示 %>
     <div class='buy-item-info'>
-      <%= image_tag "star.png", class: 'buy-item-img' %>
+      <%= image_tag @item.image, class: 'buy-item-img' %>
       <div class='buy-item-right-content'>
         <h2 class='buy-item-text'>
+      
           <%= @item.product %>
         </h2>
         <div class='buy-item-price'>
           <p class='item-price-text'>¥<%= @item.selling_price %></p>
-          <p class='item-price-sub-text'><%= "@item.shipping_fee.name" %></p>
+          <p class='item-price-sub-text'><%= @item.shipping_fee.name %></p>
         </div>
       </div>
     </div>
@@ -26,7 +27,7 @@
         支払金額
       </h1>
       <p class='item-payment-price'>
-        ¥<%= "@item.selling.price" %>
+        ¥<%= @item.selling_price %>
       </p>
     </div>
     <%# /支払額の表示 %>
