--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -132,15 +132,12 @@
         <%= link_to item_path(item.id) do %>
         <div class='item-img-content'>
           <%= image_tag item.image, class: "item-img" %>
-
-          <%# 商品が売れていればsold outを表示しましょう %>
-          <%# if （@items.purchase） %>
+        
+          <% if item.purchase.present? %>
           <div class='sold-out'>
             <span>Sold Out!!</span>
           </div>
-          <%#end %>
-          <%# //商品が売れていればsold outを表示しましょう %>
-
+          <% end %>
         </div>
         <div class='item-info'>
           <h3 class='item-name'>
@@ -156,10 +153,7 @@
         </div>
         <% end %>
       </li>
-    
       <% end %>
-
-
       <% else %>
       <li class='list'>
         <%= link_to '#' do %>
