--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -17,8 +17,10 @@
         <p>
           クリックしてファイルをアップロード
         </p>
-        <%= f.file_field :image, id:"item-image" %>
+        <%= f.file_field :images, name: 'item[images][]', id:"item-image" %>
       </div>
+  　 <div id="image-list"></div>
+
     </div>
     <%# /出品画像 %>
     <%# 商品名と商品説明 %>
